fixing overflow issues in iOS webkit

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -116,7 +116,6 @@ p {
   overflow-x: hidden;
   position: relative;
   width: 100%;
-  width: 100vw;
 }
 
 .content-wrapper > section {
